--- a/styles.css
+++ b/styles.css
@@ -123,8 +123,8 @@ transform: scale(1.0);
     color: #202020;
   }
 #container{
+    box-shadow: 0px 10px 15px rgba(21, 21, 21, 0.6274509804);
     width: 20rem;
-    
     border-radius: 2rem;
     padding: 20px;
     margin: 10px;
@@ -135,6 +135,7 @@ transform: scale(1.0);
 }
 
   .flags {
+      box-shadow: 0px 10px 15px rgba(21, 21, 21, 0.6274509804);
 justify-content: center;
     display: flex;
     flex-direction: column;
@@ -232,7 +233,7 @@ color: #fff;
   }
 
   .flag{
-    
+    box-shadow: 0px 10px 15px rgba(21, 21, 21, 0.6274509804);  
     transform: scale(1.0);
     transition: 0.3s;
   }
