--- a/styles.css
+++ b/styles.css
@@ -94,8 +94,21 @@ to {background-position: -100px 0px;background-size:2750px;}
 
 }
 #error{
+    color: #000000;
+  text-align: center;
     font-family: 'Noto Sans', sans-serif;
     font-size: 50px;
+    animation-name: error;
+    animation-iteration-count: infinite;
+    animation-direction: alternate-reverse;
+    position: relative;
+    animation: error 3s infinite;
+}
+
+@keyframes error {
+  0% {top: 0px;}
+  50% {top: 8px;}
+  100% {top: 0px;}
 }
 
 .bandera{
